<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/score_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="3"
                android:fontFamily="@font/inter_medium"
                android:textSize="80sp" />

            <ImageView
                android:id="@+id/home_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/txt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/home_team"
                android:textSize="20sp"
                android:fontFamily="@font/inter_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_add_home_1"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="+1" />
                <Button
                    android:id="@+id/btn_add_home_2"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="+2" />
                <Button
                    android:id="@+id/btn_add_home_3"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="+3" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/score_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="3"
                android:fontFamily="@font/inter_medium"
                android:textSize="80sp" />

            <ImageView
                android:id="@+id/away_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/txt_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/away_team"
                android:textSize="20sp"
                android:fontFamily="@font/inter_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_add_away_1"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="+1" />
                <Button
                    android:id="@+id/btn_add_away_2"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="+2" />
                <Button
                    android:id="@+id/btn_add_away_3"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    android:text="+3" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/yellow"/>

    <Button
        android:id="@+id/btn_result"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_gravity="center"
        android:backgroundTint="@color/yellow"/>
</LinearLayout>